--- a/销售页面完整版.html
+++ b/销售页面完整版.html
@@ -19,6 +19,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23000000' rx='12'/><text x='50' y='75' font-family='Georgia, Times New Roman, serif' font-size='72' font-weight='bold' fill='white' text-anchor='middle' letter-spacing='-1'>C</text></svg>">
 
+    <!-- Common CSS -->
+    <link rel="stylesheet" href="/css/common.css">
+
     <style>
         * {
             margin: 0;
@@ -26,21 +29,65 @@
             box-sizing: border-box;
         }
 
+        :root {
+            --bg-primary: #ffffff;
+            --bg-secondary: #f5f5f5;
+            --bg-card: #ffffff;
+            --text-primary: #000000;
+            --text-secondary: #666666;
+            --accent: #000000;
+            --accent-hover: #333333;
+            --border: #e5e5e5;
+            --button-bg-dark: #000000;
+            --button-text-dark: #ffffff;
+            --color-blue-light: #667eea;
+            --color-purple: #764ba2;
+            --color-success: #27ae60;
+            --color-warning: #f39c12;
+            --color-error: #e74c3c;
+            --color-gray-100: #f8f9fa;
+            --color-gray-200: #e0e0e0;
+            --color-gray-500: #999;
+            --color-gray-800: #2c3e50;
+            --color-gray-900: #1a1a1a;
+        }
+
+        /* 深色模式 */
+        [data-theme="dark"] {
+            --bg-primary: #0a0a0a;
+            --bg-secondary: #141414;
+            --bg-card: #1a1a1a;
+            --text-primary: #ffffff;
+            --text-secondary: #a0a0a0;
+            --accent: #ffffff;
+            --accent-hover: #e0e0e0;
+            --border: #2a2a2a;
+            --button-bg-dark: #ffffff;
+            --button-text-dark: #000000;
+            --color-gray-100: #1a1a1a;
+            --color-gray-200: #2a2a2a;
+            --color-gray-500: #999999;
+            --color-gray-800: #e0e0e0;
+            --color-gray-900: #f5f5f5;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
             line-height: 1.6;
-            background: #ffffff;
+            background: var(--bg-primary);
             min-height: 100vh;
             padding: 20px;
+            color: var(--text-primary);
         }
 
         .container {
             max-width: 900px;
             margin: 0 auto;
+            padding-top: 80px;
         }
 
         .sales-card {
-            background: #ffffff;
+            background: var(--bg-card);
             border-radius: 20px;
             padding: 50px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.08);
@@ -49,14 +96,14 @@
         .back-link {
             display: inline-block;
             margin-bottom: 30px;
-            color: #000000;
+            color: var(--text-primary);
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s;
         }
 
         .back-link:hover {
-            color: #333333;
+            color: var(--accent-hover);
         }
 
         /* Header */
@@ -67,23 +114,23 @@
 
         .header h1 {
             font-size: 2.8rem;
-            color: #1a1a1a;
+            color: var(--text-primary);
             margin-bottom: 15px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, var(--color-blue-light) 0%, var(--color-purple) 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
 
         .header .subtitle {
-            color: #666666;
+            color: var(--text-secondary);
             font-size: 1.2rem;
             margin-bottom: 20px;
         }
 
         .price-banner {
-            background: #000000;
-            color: white;
+            background: var(--button-bg-dark);
+            color: var(--button-text-dark);
             padding: 25px 40px;
             border-radius: 15px;
             margin: 25px 0;
@@ -100,25 +147,27 @@
         .price-banner .price {
             font-size: 3rem;
             font-weight: bold;
+            color: var(--button-text-dark);
         }
 
         .price-banner .original {
             text-decoration: line-through;
             opacity: 0.8;
             font-size: 1.2rem;
+            color: var(--button-text-dark);
         }
 
         /* Product List */
         .product-section {
             margin: 40px 0;
             padding: 30px;
-            background: #f8f9fa;
+            background: var(--bg-secondary);
             border-radius: 15px;
         }
 
         .product-section h2 {
             font-size: 1.8rem;
-            color: #2c3e50;
+            color: var(--text-primary);
             margin-bottom: 20px;
             display: flex;
             align-items: center;
@@ -126,7 +175,7 @@
         }
 
         .product-item {
-            background: white;
+            background: var(--bg-card);
             padding: 25px;
             border-radius: 12px;
             margin-bottom: 20px;
@@ -141,7 +190,7 @@
 
         .product-item h3 {
             font-size: 1.4rem;
-            color: #1a1a1a;
+            color: var(--text-primary);
             margin-bottom: 15px;
             display: flex;
             justify-content: space-between;
@@ -149,8 +198,8 @@
         }
 
         .product-item .price {
-            background: #000000;
-            color: white;
+            background: var(--button-bg-dark);
+            color: var(--button-text-dark);
             padding: 5px 15px;
             border-radius: 20px;
             font-size: 0.9rem;
@@ -166,14 +215,14 @@
             padding: 8px 0;
             padding-left: 30px;
             position: relative;
-            color: #555;
+            color: var(--text-primary);
         }
 
         .product-item li:before {
             content: "✓";
             position: absolute;
             left: 0;
-            color: #000000;
+            color: var(--accent);
             font-weight: bold;
         }
 
@@ -182,7 +231,7 @@
             width: 100%;
             border-collapse: collapse;
             margin: 30px 0;
-            background: white;
+            background: var(--bg-card);
             border-radius: 12px;
             overflow: hidden;
             box-shadow: 0 4px 15px rgba(0,0,0,0.05);
@@ -192,12 +241,13 @@
         .comparison-table td {
             padding: 20px;
             text-align: left;
-            border-bottom: 1px solid #f0f0f0;
+            border-bottom: 1px solid var(--border);
+            color: var(--text-primary);
         }
 
         .comparison-table th {
-            background: #000000;
-            color: white;
+            background: var(--button-bg-dark);
+            color: var(--button-text-dark);
             font-weight: bold;
             font-size: 1.1rem;
         }
@@ -207,9 +257,9 @@
         }
 
         .comparison-table .highlight {
-            background: #f5f5f5;
+            background: var(--bg-secondary);
             font-weight: bold;
-            color: #000000;
+            color: var(--text-primary);
             font-size: 1.2rem;
         }
 
@@ -224,7 +274,7 @@
         .feature-box {
             text-align: center;
             padding: 25px;
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+            background: linear-gradient(135deg, var(--bg-secondary) 0%, var(--bg-primary) 100%);
             border-radius: 12px;
             transition: all 0.3s;
         }
@@ -241,12 +291,12 @@
 
         .feature-title {
             font-weight: bold;
-            color: #2c3e50;
+            color: var(--text-primary);
             margin-bottom: 8px;
         }
 
         .feature-desc {
-            color: #666;
+            color: var(--text-secondary);
             font-size: 0.9rem;
         }
 
@@ -258,14 +308,14 @@
         .faq-section h3 {
             text-align: center;
             font-size: 1.8rem;
-            color: #2c3e50;
+            color: var(--text-primary);
             margin-bottom: 30px;
         }
 
         .faq-item {
             margin-bottom: 20px;
             padding: 20px;
-            background: white;
+            background: var(--bg-card);
             border-radius: 12px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.05);
             cursor: pointer;
@@ -278,7 +328,7 @@
 
         .faq-question {
             font-weight: bold;
-            color: #2c3e50;
+            color: var(--text-primary);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -286,10 +336,10 @@
 
         .faq-answer {
             margin-top: 15px;
-            color: #666;
+            color: var(--text-secondary);
             line-height: 1.8;
             padding-top: 15px;
-            border-top: 1px solid #f0f0f0;
+            border-top: 1px solid var(--border);
         }
 
         /* CTA Button */
@@ -297,8 +347,8 @@
             display: block;
             width: 100%;
             padding: 25px 40px;
-            background: #000000;
-            color: white;
+            background: var(--button-bg-dark);
+            color: var(--button-text-dark);
             text-align: center;
             text-decoration: none;
             border-radius: 15px;
@@ -311,13 +361,13 @@
 
         .cta-button:hover {
             transform: translateY(-5px);
-            background: #333333;
+            background: var(--accent-hover);
         }
 
         /* Urgency Banner */
         .urgency-banner {
-            background: #000000;
-            color: white;
+            background: var(--button-bg-dark);
+            color: var(--button-text-dark);
             padding: 20px;
             border-radius: 12px;
             text-align: center;
@@ -327,6 +377,7 @@
 
         .urgency-banner strong {
             font-size: 1.3rem;
+            color: var(--button-text-dark);
         }
 
         /* Trust Badges */
@@ -342,7 +393,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            color: #555;
+            color: var(--text-secondary);
             font-size: 0.9rem;
         }
 
@@ -352,7 +403,7 @@
 
         /* Contact */
         .contact-section {
-            background: #f8f9fa;
+            background: var(--bg-secondary);
             padding: 30px;
             border-radius: 12px;
             margin: 30px 0;
@@ -361,11 +412,11 @@
 
         .contact-section h3 {
             margin-bottom: 20px;
-            color: #2c3e50;
+            color: var(--text-primary);
         }
 
         .contact-info {
-            color: #666;
+            color: var(--text-secondary);
             line-height: 2;
         }
 
@@ -434,6 +485,22 @@
     </style>
 </head>
 <body>
+    <!-- 导航栏 -->
+    <nav class="nav-header" style="background: var(--bg-card); padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; backdrop-filter: blur(10px); border-bottom: 1px solid var(--border);">
+        <div class="nav-content" style="max-width: 1400px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
+            <a href="index.html" class="nav-logo" style="color: var(--text-primary); text-decoration: none; font-size: 1.5rem; font-weight: bold; font-family: Georgia, serif;">COLIN</a>
+            <div class="nav-links" style="display: flex; gap: 2rem; align-items: center;">
+                <a href="index.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">首页</a>
+                <a href="archive.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">文章归档</a>
+                <a href="products.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">精选资源</a>
+                <a href="subscribe.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">订阅</a>
+                <button class="theme-switcher" style="width: 45px; height: 45px; border-radius: 50%; background: var(--bg-card); border: 1px solid var(--border); display: flex; align-items: center; justify-content: center; cursor: pointer; font-size: 1.2rem; transition: all 0.3s;">
+                    <span class="theme-icon">🌙</span>
+                </button>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
         <a href="index.html" class="back-link">← 返回首页</a>
 
@@ -675,11 +742,13 @@
                 </div>
             </div>
 
-            <div style="text-align: center; margin-top: 40px; color: #999; font-size: 0.85rem;">
+            <div style="text-align: center; margin-top: 40px; color: var(--text-secondary); font-size: 0.85rem;">
                 *本产品为虚拟商品，付款后不支持退货，但提供7天不满意退款保障*
             </div>
         </div>
     </div>
+
+    <script src="/js/common.js" defer></script>
 
     <script>
         // FAQ 切换功能
@@ -695,28 +764,44 @@
             answer.style.display = 'none';
         });
 
-        // 返回顶部按钮
-        const backToTopBtn = document.createElement('button');
-        backToTopBtn.className = 'back-to-top';
-        backToTopBtn.innerHTML = '↑';
-        backToTopBtn.setAttribute('title', '返回顶部');
-        document.body.appendChild(backToTopBtn);
+        // 深色模式初始化
+        let currentTheme = localStorage.getItem('preferred-theme') || 'light';
+        document.documentElement.setAttribute('data-theme', currentTheme);
 
-        // 初始隐藏
-        backToTopBtn.classList.add('hidden');
+        const themeIcon = document.querySelector('.theme-icon');
+        const themeSwitcher = document.querySelector('.theme-switcher');
 
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 300) {
-                backToTopBtn.classList.remove('hidden');
-            } else {
-                backToTopBtn.classList.add('hidden');
+        function toggleTheme() {
+            currentTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            document.documentElement.setAttribute('data-theme', currentTheme);
+
+            if (themeIcon) {
+                themeIcon.textContent = currentTheme === 'dark' ? '🌙' : '☀️';
             }
-        });
+            if (themeSwitcher) {
+                themeSwitcher.setAttribute('aria-pressed', currentTheme === 'dark' ? 'true' : 'false');
+                themeSwitcher.setAttribute('aria-label', currentTheme === 'dark' ? '切换到浅色主题' : '切换到深色主题');
+            }
 
-        backToTopBtn.addEventListener('click', () => {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
+            localStorage.setItem('preferred-theme', currentTheme);
+        }
+
+        // 初始化主题
+        if (themeIcon) {
+            themeIcon.textContent = currentTheme === 'dark' ? '🌙' : '☀️';
+        }
+
+        if (themeSwitcher) {
+            themeSwitcher.addEventListener('click', toggleTheme);
+        }
+
+        // 导航链接hover效果
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('mouseenter', () => {
+                link.style.color = 'var(--accent-hover)';
+            });
+            link.addEventListener('mouseleave', () => {
+                link.style.color = 'var(--text-primary)';
             });
         });
     </script>
