--- a/销售页面完整版.html
+++ b/销售页面完整版.html
@@ -340,6 +340,7 @@
             line-height: 1.8;
             padding-top: 15px;
             border-top: 1px solid var(--border);
+            display: none;
         }
 
         /* CTA Button */
@@ -449,8 +450,8 @@
             right: 30px;
             width: 50px;
             height: 50px;
-            background: #000000;
-            color: white;
+            background: var(--button-bg-dark);
+            color: var(--button-text-dark);
             border: none;
             border-radius: 50%;
             cursor: pointer;
