--- a/支付页面模板.html
+++ b/支付页面模板.html
@@ -193,20 +193,20 @@
             color: white;
         }
 
-        /* 导航栏 */
-        .nav-header {
-            background: var(--bg-card);
-            padding: 1rem 2rem;
+        /* 导航栏下拉菜单样式 */
+        nav {
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
             z-index: 1000;
+            background: var(--bg-card);
             backdrop-filter: blur(10px);
             border-bottom: 1px solid var(--border);
+            padding: 1.2rem 2rem;
         }
 
-        .nav-content {
+        nav > div {
             max-width: 1400px;
             margin: 0 auto;
             display: flex;
@@ -214,63 +214,111 @@
             justify-content: space-between;
         }
 
-        .nav-logo {
+        nav a {
             color: var(--text-primary);
             text-decoration: none;
-            font-size: 1.5rem;
-            font-weight: bold;
-            font-family: Georgia, serif;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-            align-items: center;
-        }
-
-        .nav-links a {
-            color: var(--text-primary);
-            text-decoration: none;
-            font-size: 0.95rem;
             transition: color 0.3s;
         }
 
-        .nav-links a:hover {
-            color: var(--accent-hover);
+        nav a:hover {
+            color: var(--accent);
         }
 
-        .theme-switcher {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            background: var(--bg-card);
-            border: 1px solid var(--border);
+        nav ul {
             display: flex;
+            gap: 2rem;
+            list-style: none;
             align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            font-size: 1.2rem;
-            transition: all 0.3s;
+            margin: 0;
+            padding: 0;
         }
 
-        .theme-switcher:hover {
-            background: var(--accent);
-            border-color: var(--accent);
+        nav > div > ul > li > a {
+            font-size: 0.95rem;
+        }
+
+        nav > div > ul > li > .dropdown-arrow {
+            font-size: 0.6rem;
+            margin-left: 0.3rem;
+            transition: transform 0.3s;
+            display: inline-block;
+        }
+
+        nav > div > ul > li:hover > .dropdown-arrow {
             transform: rotate(180deg);
         }
-        @media (max-width: 768px) {
-            .header h1 {
-                font-size: 2em;
-            }
-            .product-title {
-                font-size: 1.3em;
-            }
-            .product-price {
-                font-size: 2em;
-            }
-            .buttons {
-                flex-direction: column;
-            }
+
+        nav .nav-dropdown > ul,
+        nav ul li > ul {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background: var(--bg-card);
+            min-width: 200px;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+            border: 1px solid var(--border);
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(10px);
+            transition: all 0.3s ease;
+            padding: 0.5rem 0;
+            z-index: 1000;
+            list-style: none;
+            margin: 0;
+        }
+
+        nav .nav-dropdown:hover > ul,
+        nav ul li:hover > ul {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
+        nav .nav-dropdown > ul > li,
+        nav ul li > ul > li {
+            position: relative;
+        }
+
+        nav .nav-dropdown > ul > li > a,
+        nav ul li > ul > li > a {
+            display: block;
+            padding: 0.6rem 1rem;
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+            white-space: nowrap;
+            transition: all 0.2s;
+        }
+
+        nav .nav-dropdown > ul > li > a:hover,
+        nav ul li > ul > li > a:hover {
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+            padding-left: 1.3rem;
+        }
+
+        /* 二级子菜单 */
+        nav .nav-dropdown > ul > li > ul,
+        nav ul li > ul > li > ul {
+            position: absolute;
+            left: 100%;
+            top: 0;
+            min-width: 200px;
+            transform: translateX(-10px);
+            z-index: 1001;
+            padding: 0;
+        }
+
+        nav .nav-dropdown > ul > li:hover > ul,
+        nav ul li > ul > li:hover > ul {
+            opacity: 1;
+            visibility: visible;
+            transform: translateX(0);
+        }
+
+        nav .nav-dropdown > ul > li > ul > li > a,
+        nav ul li > ul > li > ul > li > a {
+            font-size: 0.85rem;
         }
     </style>
 </head>
